--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -3,5 +3,7 @@
 =Changelog=
 
 ==1.0.5==
- * Countdown für Forschung hinzugefügt
+ * Speichergebäude hinzugefügt
+ * Login wird jetzt im TabView durchgeführt
+ * Countdown für Forschung und Schiffe hinzugefügt
  * Overview zeigt jetzt Planetendaten und Flottenbewegung
