--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -2,6 +2,10 @@
 
 =Changelog=
 
+==0.1.6==
+ * Unterscheidung zwischen off und disabled (Issue 3)
+ * Automatisches laden der univerums-liste (einmalig)
+
 ==0.1.5==
  * Speichergebäude hinzugefügt
  * Login wird jetzt im TabView durchgeführt
