--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -5,7 +5,7 @@
 ==0.3.1==
  * Completed translation for English and German
  * Added function to reload the universe-list
- * Fixed crash when loading universe-list without network connection
+ * Fixed crash when loading universe-list without network connection (Issue 10)
  * Fixed freeze/crash with wrong login
  * Added PayPal-Donate Button
 
