--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -2,6 +2,10 @@
 
 =Changelog=
 
+==0.3.2==
+ * fixed countdown stacking
+ * added (readonly) message system
+
 ==0.3.1==
  * Completed translation for English and German
  * Added function to reload the universe-list
