Edited wiki page Changelog through web user interface.

--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -5,7 +5,7 @@
 ==0.4==
  * Added moons to the planet list (Issue 11)
  * Added icons an values for moon buildings
- * Changed User Agent to default for Android 2.2.1
+ * Changed User Agent to default agent for Android 2.2.1
 
 ==0.3.2==
  * fixed countdown stacking
