Edited wiki page Screenshots through web user interface.

--- a/wiki/Screenshots.wiki
+++ b/wiki/Screenshots.wiki
@@ -4,5 +4,5 @@
 || *Login Screen* || *Settings* || *Building List* ||
 || http://image.cp-g.de/pics/4d20d158bafc5.png || http://image.cp-g.de/pics/4d20d1640e14e.png || http://image.cp-g.de/pics/4d20d16a4dead.png ||
 || *Change Current Planet* || *Menu* || *Fleet Events* ||
-|| http://image.cp-g.de/pics/4d20d1708cebf.png ||
-|| *Messages* ||
+|| http://image.cp-g.de/pics/4d20d1708cebf.png || http://image.cp-g.de/pics/4d2391f2ceb7c.png || http://image.cp-g.de/pics/4d2391ca2d294.png ||
+|| *Message List* || *Message View* || *Fleet Event* ||
