--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -65,5 +65,7 @@
 	<string name="message_to">An:</string>
 	<string name="message_date">Datum:</string>
 	<string name="message_subject">Betreff:</string>
-
+	
+	<string name="object_amount">Anzahl</string>
+	<string name="object_level">Stufe</string>
 </resources>
