--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -61,6 +61,7 @@
 	<string name="message_respond">Respond</string>
 	<string name="message_report">Report</string>
 	<string name="message_delete">Delete</string>
+	<string name="message_delete_all">Delete All</string>
 	<string name="message_from">From:</string>
 	<string name="message_to">To:</string>
 	<string name="message_date">Date:</string>
