--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -5,7 +5,7 @@
 	<string name="moon">Mond</string>
 	
 	<string name="tos_version">1</string>
-	<string name="tos">This application has not been approved by Gameforge so I\'m not resposible if your account gets banned.\nThis app is highly experimaental so I\'m not responsibel for any demage it may do to your account.</string>
+	<string name="tos">Diese App ist nicht offiziell erlaubt, ich bin daher nicht verantwortlich falls dein Account gesperrt wird.\nDiese App ist hoch experimentell, ich bin nicht verantwortlich fallst dein Account beschädigt wird.</string>
 	
 	<string name="menu_settings">Einstellungen</string>
 	<string name="menu_reload_serverlist">Serverlist neu laden</string>
@@ -61,6 +61,7 @@
 	<string name="message_respond">Antworten</string>
 	<string name="message_report">Melden</string>
 	<string name="message_delete">Löschen</string>
+	<string name="message_delete_all">Alle Löschen</string>
 	<string name="message_from">Von:</string>
 	<string name="message_to">An:</string>
 	<string name="message_date">Datum:</string>
