--- a/trunk/res/values/strings.xml
+++ b/trunk/res/values/strings.xml
@@ -26,6 +26,8 @@
 	<string name="password">Password</string>   
 	<string name="login_button">Login</string>
 	
+	<string name="more">More</string>
+	
 	<string name="fleet_info_title">Fleet Information</string>
 	<string name="new_mission">New Mission</string>
 	
