Edited wiki page ToDo through web user interface.

--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -1,6 +1,8 @@
 #summary ToDo list
 
 = Basic =
+ * Overview
+  * Add (up to 3) countdowns
  * Resource Settings
   * See current production
   * Change percent
