--- a/trunk/res/values-de/strings.xml
+++ b/trunk/res/values-de/strings.xml
@@ -5,7 +5,7 @@
 <string name="moon">Mond</string>
 
 <string name="tos_version">1</string>
-<string name="tos">Diese App ist nicht offiziell erlaubt, ich bin daher nicht verantwortlich falls dein Account gesperrt wird.\\nDiese App ist hoch experimentell, ich bin nicht verantwortlich fallst dein Account beschädigt wird.</string>
+<string name="tos">Diese App ist nicht offiziell erlaubt, ich bin daher nicht verantwortlich falls dein Account gesperrt wird.\nDiese App ist hoch experimentell, ich bin nicht verantwortlich fallst dein Account beschädigt wird.</string>
 
 <string name="menu_settings">Einstellungen</string>
 <string name="menu_reload_serverlist">Serverlist neu laden</string>
@@ -80,4 +80,9 @@
 <string name="object_amount">Anzahl</string>
 <string name="object_level">Stufe</string>
 
+<string name="galaxy_colonize">%s Kolonisieren</string>
+<string name="galaxy_probes">Spionagesonde senden?</string>
+<string name="galaxy_activity">Aktivität:</string>
+<string name="galaxy_activity_now">jetzt</string>
+<string name="galaxy_empty_slot">Leer</string>
 </resources>
