--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -2,7 +2,7 @@
 
 = Basic =
  * Overview
-  * Add (up to 3) countdowns
+  * ~~Add (up to 3) countdowns~~
  * Resource Settings
   * See current production
   * Change percent
