Edited wiki page ToDo through web user interface.

--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -21,6 +21,9 @@
   * ~~Delete message~~
   * Report message
   * Create new message
+ * Alliance
+  * View Info
+  * Join/Quit an alliance
 
 = Extra =
 
