Edited wiki page ToDo through web user interface.

--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -10,7 +10,7 @@
   * New mission
    * ~~Display current ships on planet~~
    * ~~Select Ships~~
-   * ~~Set target and mission type~~
+   * ~~Set target~~ and mission type
    * Set speed and cargo
   * Cancel current fleet event
  * Messages
