renamed message detail layout Added Message Compose view and functionality Added Player class

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -69,6 +69,7 @@
 	<string name="settings_fleet_hostile">Hostile</string>
 	<string name="settings_fleet_hostile_summary">Notify on hostile events</string>
 	
+	<string name="message_send">Send</string>
 	<string name="message_respond">Respond</string>
 	<string name="message_report">Report</string>
 	<string name="message_delete">Delete</string>
