--- a/trunk/res/values-nl/strings.xml
+++ b/trunk/res/values-nl/strings.xml
@@ -58,7 +58,7 @@
 <string name="settings_fleet_hostile">Vijandelijk</string>
 <string name="settings_fleet_hostile_summary">Waarschuwen bij vijandelijke activiteit</string>
 
-<string name="message_respond">Antwoord</string>
+<string name="message_reply">Antwoord</string>
 <string name="message_report">Raport</string>
 <string name="message_delete">Verwijder</string>
 <string name="message_delete_all">Alles verwijderen</string>
