--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -17,7 +17,7 @@
   * ~~List messages~~
    * ~~Delete all messages~~
   * ~~View message~~
-   * Parse and show Message depending on the type
+   * Parse and show Message depending on its type
   * Reply to message
   * ~~Delete message~~
   * Report message
