Edited wiki page Screenshots through web user interface.

--- a/wiki/Screenshots.wiki
+++ b/wiki/Screenshots.wiki
@@ -1,10 +1,25 @@
 #summary This is how the app looks like
 
-|| http://image.cp-g.de/pics/4d245ab354a8e.png || http://image.cp-g.de/pics/4d20d149b07b2.png || http://image.cp-g.de/pics/4d20d2a60e079.png ||
-|| *Login Screen* || *Settings* || *Building List* ||
-|| http://image.cp-g.de/pics/4d20d158bafc5.png || http://image.cp-g.de/pics/4d20d1640e14e.png || http://image.cp-g.de/pics/4d20d16a4dead.png ||
-|| *Change Current Planet* || *Menu* || *Fleet Events* ||
-|| http://image.cp-g.de/pics/4d20d1708cebf.png || http://image.cp-g.de/pics/4d2391f2ceb7c.png || http://image.cp-g.de/pics/4d2391ca2d294.png ||
-|| *Message List* || *Message View* || *Fleet Event* ||
+|| http://image.cp-g.de/pics/4d245ab354a8e.png ||
+|| *Login Screen* ||
+|| http://image.cp-g.de/pics/4d20d149b07b2.png || 
+|| *Settings* || 
+||  http://image.cp-g.de/pics/4d20d2a60e079.png ||
+|| *Building List* ||
+|| http://image.cp-g.de/pics/4d20d158bafc5.png || 
+|| *Change Current Planet* || 
+||  http://image.cp-g.de/pics/4d20d1640e14e.png ||
+|| *Menu* || 
+|| http://image.cp-g.de/pics/4d20d16a4dead.png ||
+|| *Fleet Events* ||
+|| http://image.cp-g.de/pics/4d20d1708cebf.png ||
+|| *Message List* || 
+|| http://image.cp-g.de/pics/4d2391f2ceb7c.png || 
+|| *Message View* || 
+|| http://image.cp-g.de/pics/4d2391ca2d294.png ||
+|| *Fleet Event* ||
 || http://image.cp-g.de/pics/4d709f10dd09f.png ||
 || *Galaxy View* ||
+|| http://image.cp-g.de/pics/4d709f10dd09f.png ||
+|| *Resource Settings* ||
+|| http://image.cp-g.de/pics/4d8497473630f.png ||
