--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -12,6 +12,7 @@
 	
 	<string name="menu_settings">Einstellungen</string>
 	<string name="menu_reload_serverlist">Serverlist neu laden</string>
+	<string name="menu_about">Über</string>
 	<string name="menu_messages">Nachrichten</string>
 	<string name="menu_fleet">Flotte</string>
 	<string name="menu_galaxy">Galaxy</string>
@@ -49,6 +50,7 @@
 	<string name="now_building">%s wird gebaut.</string>
 	<string name="building_time">Baudauer: %s</string>
 	<string name="buildable_in">Nicht genügend Ressourcen vorhanden.\nVerfügbar in %s.</string>
+	<string name="buildable_once">%s kann nur einmal gebaut werden</string>
 	<string name="loading">Laden...</string>
 	<string name="change_planet">Wechsle nach \"%s\"</string>
 	<string name="in_queue">In Bauliste</string>
