--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,6 +12,7 @@
 
 	<string name="menu_settings">Settings</string>
 	<string name="menu_reload_serverlist">Reload Serverlist</string>
+	<string name="menu_about">About</string>
 	<string name="menu_messages">Messages</string>
 	<string name="menu_fleet">Fleet</string>
 	<string name="menu_galaxy">Galaxy</string>
@@ -49,6 +50,7 @@
 	<string name="now_building">%s is now being built.</string>
 	<string name="building_time">Building time: %s</string>
 	<string name="buildable_in">Not enough resources\nBuildable in: %s</string>
+	<string name="buildable_once">%s can only be built once</string>
 	<string name="loading">Loading...</string>
 	<string name="change_planet">Switching to \"%s\"</string>
 	<string name="in_queue">In queue</string>
