fixed fleet3 to close when no mission is selected updated German translation

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -115,4 +115,6 @@
 	<string name="fleet3_target">Ziel:</string>
 	<string name="fleet3_send">Flotte senden</string>
 	<string name="fleet3_cargobays">Laderaum:</string>
+	<string name="fleet3_noMission">Mission auswählen</string>
+	<string name="fleet3_expedition">Dauer der Expedition:</string>
 </resources>
